[B]Version 1.3.5 (Oct 30, 2012)[/B]
- Fixed UTF8 issue when browsing channels and searching (missed those in the previous fix)

[B]Version 1.3.4 (Oct 17, 2012)[/B]
- Improved display of show titles that contain special (non-ASCII) characters (added UTF8 support)

[B]Version 1.3.3 (Oct 16, 2012)[/B]
- Added new streaming quality setting and enhanced "Watch (Stream)" context menu to force what quality to stream the recording back as (note that this is a workaround to using the standard streaming URL which does not work due to a bug in ffmpeg that we're waiting to get fixed)
- Added "Add/Remove Favorite" show level context menu items

[B]Version 1.3.2 (Oct 16, 2012)[/B]
- Added show level context menu items to enable "Set All Watched", "Clear All Watched", and "Delete All" which takes action on all episodes within a show

[B]Version 1.3.1 (Oct 13, 2012)[/B]
- Added "Watch (Streamed)" context menu item which enables playing back via using SageTV remote services
- Fixed file/watched duration issue where "None" wasn't handled

[B]Version 1.3.0 (Oct 9, 2012)[/B]
- Added support for playing back recordings that have multiple segments (using stack://)

[B]Version 1.2.12 (Oct 8, 2012)[/B]
- Added "Add Favorite" context menu item (for airings and searches)

[B]Version 1.2.11 (Oct 8, 2012)[/B]
- Added "Delete/Wrong Recording" context menu item

[B]Version 1.2.10 (Oct 8, 2012)[/B]
- Added "Delete/Set Watched", "Delete/Clear Watched", and "Delete/Don't Like" context menu items

[B]Version 1.2.9 (Oct 8, 2012)[/B]
- Added "Archive" context menu item

[B]Version 1.2.8 (Oct 8, 2012)[/B]
- Added support for playing back recordings that have multiple segments
- Added "Set Watched" and "Clear Watched" context menu items

[B]Version 1.2.7 (Oct 5, 2012)[/B]
- Added support for background fanart

[B]Version 1.2.6 (Oct 1, 2012)[/B]
- Updated playback path settings to require you to browse for it vs. free-text to ensure the path that is used for live TV playback is correctly formatted