@@ -113,6 +113,13 @@ if ( sage_unc5 != '' and sage_unc5 != None ):
 def filemap(filepath):
     for (rec, unc) in sagemappings:
         if ( filepath.find(rec) != -1 ):
+            # If the user didn't specify a trailing \ or / in the recording path setting, add that as that's critical to mapping the path correctly
+            if(rec.find("\\") != -1):
+                if(rec.rfind("\\") != len(rec)):
+                    rec = rec + "\\"
+            elif(rec.find("/") != -1):
+                if(rec.rfind("/") != len(rec)):
+                    rec = rec + "/"
             return filepath.replace(rec, unc)
 
     return filepath
